Ensures that logo stays visible above moon.

--- a/styles/global/_layout.scss
+++ b/styles/global/_layout.scss
@@ -94,6 +94,7 @@ main .orb {
     position: absolute;
     top: 10px;
     text-align: center;
+    z-index: 5000;
     img {
       width: 25%;
       animation: Pulsate 5s ease-in-out infinite;
